--- a/.gitignore
+++ b/.gitignore
@@ -322,4 +322,11 @@ Assets/StreamingAssets/crashlytics-build.properties
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+### VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
 # End of https://www.gitignore.io/api/xcode,swift,macos,ios,android,unity,Intellij
