--- a/LINE_SDK_Unity/Assets/Plugins/Android/mainTemplate.gradle
+++ b/LINE_SDK_Unity/Assets/Plugins/Android/mainTemplate.gradle
@@ -30,16 +30,7 @@ apply plugin: 'com.android.application'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'], excludes: ['unity-classes.jar'])
 
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:customtabs:27.0.2'
-    implementation('com.madgag.spongycastle:prov:1.58.0.0') {
-       exclude group: 'junit', module: 'junit'
-    }
-
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.10.5'
-    runtimeOnly ('io.jsonwebtoken:jjwt-orgjson:0.10.5') {
-        exclude group: 'org.json', module: 'json' //provided by Android natively
-    }
+    implementation 'com.linecorp:linesdk:5.0.1'
 
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
