Add release script

--- a/.gitignore
+++ b/.gitignore
@@ -329,4 +329,6 @@ Assets/StreamingAssets/crashlytics-build.properties
 !.vscode/launch.json
 !.vscode/extensions.json
 
+/.bundle
+
 # End of https://www.gitignore.io/api/xcode,swift,macos,ios,android,unity,Intellij
