--- a/LINE_SDK_Unity/Assets/LineSDK/Editor/CocoaPods/Podfile
+++ b/LINE_SDK_Unity/Assets/LineSDK/Editor/CocoaPods/Podfile
@@ -2,5 +2,5 @@ platform :ios, '10.0'
 
 target 'Unity-iPhone' do
     use_frameworks!
-    pod 'LineSDKSwift/ObjC', :git => 'https://github.com/line/line-sdk-ios-swift.git', :branch => 'master'
+    pod 'LineSDKSwift/ObjC', '~> 5.1'
 end
