--- a/LINE_SDK_Unity/Assets/Plugins/Android/gradleTemplate.properties
+++ b/LINE_SDK_Unity/Assets/Plugins/Android/gradleTemplate.properties
@@ -1,5 +1,8 @@
+unityStreamingAssets=.unity3d**STREAMING_ASSETS**
 org.gradle.jvmargs=-Xmx**JVM_HEAP_SIZE**M
 org.gradle.parallel=true
 **ADDITIONAL_PROPERTIES**
 android.useAndroidX=true
 android.enableJetifier=true
+
+android.enableR8=**MINIFY_WITH_R_EIGHT**
