Replace to use 2020 compatible syntax

--- a/LINE_SDK_Unity/Assets/Plugins/Android/mainTemplate.gradle
+++ b/LINE_SDK_Unity/Assets/Plugins/Android/mainTemplate.gradle
@@ -34,7 +34,7 @@ android {
     }
 
     aaptOptions {
-        noCompress = **BUILTIN_NOCOMPRESS** + unityStreamingAssets.tokenize(', ')
+        noCompress = ['.ress', '.resource', '.obb'] + unityStreamingAssets.tokenize(', ')
         ignoreAssetsPattern = "!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~"
     }**PACKAGING_OPTIONS**
 }**REPOSITORIES**
