--- a/linesdk-android-unity-wrapper/build.gradle
+++ b/linesdk-android-unity-wrapper/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     ext.kotlin_version = '1.3.11'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
@@ -17,7 +17,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
