--- a/linesdk-android-unity-wrapper/build.gradle
+++ b/linesdk-android-unity-wrapper/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 buildscript {
-    ext.kotlin_version = '1.3.11'
+    ext.kotlin_version = '1.8.22'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:7.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -55,7 +54,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.linecorp:linesdk:5.8.1'
+    implementation 'com.linecorp.linesdk:linesdk:5.8.1'
     compileOnly files('libs/classes.jar')
 
     implementation 'com.google.code.gson:gson:2.8.5'
