--- a/LINE_SDK_Unity/Assets/Plugins/Android/gradleTemplate.properties
+++ b/LINE_SDK_Unity/Assets/Plugins/Android/gradleTemplate.properties
@@ -4,3 +4,5 @@ org.gradle.parallel=true
 **ADDITIONAL_PROPERTIES**
 android.useAndroidX=true
 android.enableJetifier=true
+
+android.enableR8=**MINIFY_WITH_R_EIGHT**
