--- a/linesdk-android-unity-wrapper/build.gradle
+++ b/linesdk-android-unity-wrapper/build.gradle
@@ -22,12 +22,11 @@ allprojects {
 
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion '30.0.3'
+    compileSdk 31
 
     defaultConfig {
-        minSdkVersion 17
-        targetSdkVersion 30
+        minSdkVersion 19
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
